force-app/main/default/objects/MCN_Switch__mdt/MCN_Switch__mdt.object-meta.xml
<CustomObject>
    <label>MCN Switch</label>
    <pluralLabel>MCN Switch</pluralLabel>
</CustomObject>