force-app/main/default/objects/MCN_Switch__mdt/fields/MCN_List__c.field-meta.xml
<CustomField>
    <fullName>MCN_List__c</fullName>
    <description>PLEASE ENTER COMMA SEPARATED MASTER CUSTOMER NUMBER</description>
    <label>MCN List</label>
    <type>TextArea</type>
</CustomField>