force-app/main/default/objects/MCN_Switch__mdt/fields/MCN_List_New__c.field-meta.xml
<CustomField>
    <fullName>MCN_List_New__c</fullName>
    <label>MCN List New</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>