force-app/main/default/objects/MCN_Switch__mdt/fields/Turn_On__c.field-meta.xml
<CustomField>
    <fullName>Turn_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn On</label>
    <type>Checkbox</type>
</CustomField>